--- a/src/ui/Dropdown.css
+++ b/src/ui/Dropdown.css
@@ -10,8 +10,8 @@
   background: #f6f6f6;
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
-  min-width: 145px;
-  font-size: 18px;
+  min-width: 175px;
+  cursor: pointer;
   color: #323232;
   font-weight: 400;
 }
@@ -35,7 +35,7 @@
 }
 
 .options.visible {
-  min-width: 145px;
+  min-width: 175px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -47,11 +47,11 @@
 }
 
 .option {
-  font-size: 18px;
   width: 100%;
   display: flex;
   justify-content: flex-start;
   padding: 0.5rem 0;
+  cursor: pointer;
 }
 
 .option.active {
