--- a/src/ui/Input.css
+++ b/src/ui/Input.css
@@ -20,6 +20,7 @@
   -webkit-mask-image: url('../../public/icons/search.svg');
   mask-image: url('../../public/icons/search.svg');
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .icon.active {
@@ -33,6 +34,7 @@
   background: #f6f6f6;
   border-radius: 0.5rem;
   padding: 0.56rem 1rem;
+  font-size: 18px;
 }
 
 .input-field:focus {
@@ -46,6 +48,9 @@
 
 .input-field::placeholder {
   font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
+  color: #aeaeae;
 }
 
 .searched-items {
@@ -72,7 +77,9 @@
   display: flex;
   justify-content: flex-start;
   padding: 0.5rem 0;
+  cursor: pointer;
 }
+
 .searched-item.active {
   color: #b5cc22;
 }
