--- a/src/ui/CheckboxGroup.css
+++ b/src/ui/CheckboxGroup.css
@@ -12,3 +12,9 @@
   grid-template-columns: repeat(4, 1fr);
   row-gap: 1rem;
 }
+
+@media screen and (max-width: 500px) {
+  .checkboxs {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
