--- a/src/ui/Input.css
+++ b/src/ui/Input.css
@@ -53,6 +53,13 @@
   color: #aeaeae;
 }
 
+@media screen and (max-width: 800px) {
+  .input-field,
+  .input-field::placeholder {
+    font-size: 16px;
+  }
+}
+
 .searched-items {
   display: none;
   width: 277px;
